# ChangeLog for app-emulation/wine
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*wine-1.7.39 (22 Mar 2015)

  22 Mar 2015; NP-Hardass <np.hardass@gmail.com>
  +files/wine-1.7.39-gstreamer-v5-staging-post.patch,
  +files/wine-1.7.39-gstreamer-v5-staging-pre.patch, +wine-1.7.39.ebuild,
  -files/wine-1.7.38-gstreamer-v5.patch, wine-9999.ebuild:
  Version bump to 1.7.39.  Update 1.7.39 and 9999 with new gstreamer pre-post
  patches GitHub #5

*wine-1.7.38 (08 Mar 2015)

  08 Mar 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.38.ebuild,
  wine-9999.ebuild:
  Version bump to 1.7.38, and update 9999 to solve Gentoo Bug #542184.  Thanks
  to tetromino. Sync with Gentoo.

  08 Mar 2015; NP-Hardass <np.hardass@gmail.com>
  +files/wine-1.7.38-gstreamer-v5-staging.patch,
  +files/wine-1.7.38-gstreamer-v5.patch, wine-9999.ebuild:
  Update to gstreamer v5, and resolve application failure Gentoo Bug #542184

  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-9999.ebuild:
  Update 9999 with changes from 1.7.37

  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.37.ebuild:
  Reduce s3tc support a runtime dep, as per changes in staging

  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.37.ebuild:
  Add new staging use flag, vaapi

*wine-1.7.37 (22 Feb 2015)

  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.37.ebuild:
  Version bump to 1.7.37

  12 Feb 2015; NP-Hardass <np.hardass@gmail.com>
  +files/wine-gentoo-2013.06.24-xdg-dir-fix.patch, wine-1.7.33-r1.ebuild,
  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild, wine-9999.ebuild:
  xdg menu fix, github issue #1

  12 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r1.ebuild,
  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild, wine-9999.ebuild:
  set lcms and xcomposite as default, github issue #3

*wine-1.7.36 (09 Feb 2015)

  09 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.36.ebuild:
  Version bump to 1.7.36
